--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,3 +14,16 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          LOCALE: "in_ID"
+          SHOW_LINES_OF_CODE: "true"
+          SHOW_COMMIT: "true"
+          SHOW_PROFILE_VIEWS: "false"
+          SHOW_DAYS_OF_WEEK: "false"
+          SHOW_LANGUAGE: "true"
+          SHOW_OS: "true"
+          SHOW_PROJECTS: "true"
+          SHOW_TIMEZONE: "false"
+          SHOW_EDITORS: "false"
+          SHOW_LANGUAGE_PER_REPO: "true"
+          SHOW_SHORT_INFO: "false"
+          SHOW_LOC_CHART: "false"
